assets/less/roadmaps/index.less
/* ... */
// Additional styles for the language select drop down
.fill-current {
  display: none;
}


// This is to make the body full height and roughly align with
// what's on www.
// Lifted from layout.less
body {

    font-family: @family-inter;
    font-weight: 300;
    line-height: 1.5;

    background: var(--colour-surface-lower);
    color: var(--txt);
    position: relative;
    scroll-padding-top: var(--nav-height);
    min-height: 100vh;

    display: flex;
    flex-direction: column;
}

.site-nav {
    // From home.less
    color: var(--nav-txt);

    --hamburger-background-inactive: var(--color-black);
    --hamburger-foreground-inactive: var(--color-gray-30);
    --hamburger-background-active: var(--color-white);
    --hamburger-foreground-active: var(--color-black);
    background-color: rgba(0, 0, 0, 0.8);

    // From 2025-fonts.less
    .nav-links .nav-ln {
        font-size: 1rem;
        font-weight: 400;
    }

    // On www, seems to be set for all headers
    h2 {
        font-weight: 400
    }

    // On www, the .entry-text has this value, but
    // I could not find where it was inherited from.
    .entry-text  {
        line-height: 27px;
    }

    // On www, the h6 modifies styles from an ancestor
    // that I could not find, so hard-coding them here.
    h6 {
        font-size: 12.06px;
        line-height: 18.09px;
    }

    .header-donate, .header-download {
        font-weight: 500;
        margin-top: -0.05rem;
        margin-left: -1rem;

        a.btn {
            padding: 0.72em 1em;
            border-width: 0.125rem; //2px;
        }

        a.btn::after {
            background: transparent;
        }

        svg {
            width: 1rem;
        }
    }
}

// Lifted from buttons.less to style the
// Downloads and Donate buttons in header nav.
// Also necessary for hamburger-btn, but should not
// be nested in .site-nav so that the padding is
// properly overridden.
.btn-donate,
.btn-donate-lg,
.btn-download-inline,
.btn-download-link,
.download-link.btn-download,
.btn,
button {
    font-size: var(--font-md);
    background: var(--btn-bg, transparent);
    border-radius: 0.375rem; //6px;
    border: .125em solid currentColor;
    color: currentColor;
    padding: .5em 3em;
    position: relative;
    transition: font-size .2s;
    text-decoration: none;
    white-space: nowrap;
}

// Hack for the fancy "dark" hover states
.btn-no-bg{
    --btn-background-color: rgba(0, 0, 0, 0.8);
    @btn-no-bg-styling();
}


// Pulled from links.less
a {
  color: currentColor;
}


// TODO: move footer support styles to own file
// Additional styles needed to make the footer work

// Probably global for www
.container.footer h4 {
    font-weight: 400;
}

// From links.less
.container.footer a{
    --accent: var(--color-link);

    color: currentColor;
    text-decoration: underline;
    transition: font-size .2s,
                text-decoration-color .2s;

    &.dotted {
        text-decoration-line: underline;
        text-decoration-style: dotted;
        text-decoration-color: currentColor;
        text-underline-offset: 0.25em;
        text-decoration-thickness: .12em;
    }
    &.donate,
    &:hover,
    &:hover:visited {
        text-decoration-color: var(--accent);
    }

}


// From /assets/less/new/layout.less

.site-links {
  font-size: var(--font-md);
  display: grid;
  gap: 30px;
  width: 100%;
  grid-template:
                "a c d e" 30px
                "b c d e";

  .site-link-section {
    display: flex;
    flex-direction: column;
    height: 180px;

    h4 {
      margin-top: 0;
      margin-bottom: 1rem;
      padding-left: 40px;
    }

    .home {
      font-weight: 600;
    }

    ul {
      list-style: none;
      margin: 0;
    }

    li {
      margin-bottom: 0.5rem;
    }

    // Help our grid template pick the correct b...
    &:nth-child(2) {
      grid-area: b;
    }
  }

  @media (max-width: @md) {
    display: flex;
    flex-direction: column;

    .site-link-section {
      height: auto;
    }
  }
}

.container {
    position: relative;
    display: flex;
    flex-direction: column;
    gap: 3rem;
    padding-inline: 1rem;
    padding-block: clamp(1rem, 5.469vw, 4.375rem); // 4.375rem~
    margin-inline: auto;
    max-width: 1280px;
    overflow: hidden;

    // For the product pages
    &.container-tight {
        max-width: 1040px;
    }

    &.no-gap {
        gap: 0;
    }

    @media (max-width: @md) {
        // Give them some space to breathe
        width: calc(100% - 1rem);
        box-sizing: border-box;
    }
}

.logo {
    max-height: 100%;
    min-width: 250px;
    max-width: 250px;
    height: 60px;
    width: auto;
    transition: color .2s;
}

.logo:hover,
.mozilla-logo:hover {
    color: var(--accent);
    transform: none;
}

svg {
    max-height: 100%;
    max-width: 100%;
}

// ==============================================================================
// actual roadmap styles
// ==============================================================================


@tablet-breakpoint: @md;
@desktop-breakpoint: @lg;
@extrawide-breakpoint: @xl;
main {
    color: var(--colour-text-icon-base);

    margin-top: 122px; // TODO: change this to a calculation.

    height: 100%;
    flex: 1 1 auto;
}

#donation {
    .web-body-small();
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 0.75rem;
    margin-top: 0.75rem;
    margin-bottom: 1.5rem;
    padding-bottom: 0.5rem;

    // Overrides from Design Team
    line-height: 1.23;


    p {
        margin: 0;
    }
    a {
        .web-body-xsmall();
        color: var(--colour-text-icon-highlight);

        // Overrides from Design Team
        line-height: normal;
    }
    .donation-icon  {
        display: inline-block;
        height: 1.5rem;
        width: 1.5rem;
        background-image: url("/media/svg/roadmaps/heart-24-default.svg");

    }
}
/* ... */

